--- a/Films/src/app/components/navbar/navbar.component.html
+++ b/Films/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <section id="navbar">
     <div class="box-main-menu">
-        <button class="button-main-menu" (click)="navegar('inicio')"><img class="img-main-menu" src="/assets/AdidasLogo.png" alt=""></button>
+        <button class="button-main-menu" (click)="navegar('inicio')"><img class="img-main-menu" src="/assets/Movie Box.png" alt=""></button>
     </div>
     
     <div class="box-search-bar">
