feat: agregue funcionalidad basica de la lista de favoritos, para evitar problemas al actualizar la pagina agregue un nuevo metodo en user.service, y ademas agregue un nuevo campo a los usuarios, tambien agregue al routing y al inicio-aux para su respectiva vista. favourite-list.component, inicio-aux.component, f-list.ts, user.service, app-routing.module.ts, app-module.ts y shared-service.ts

--- a/Films/src/app/components/inicio-aux/inicio-aux.component.html
+++ b/Films/src/app/components/inicio-aux/inicio-aux.component.html
@@ -1,9 +1,18 @@
+<!-- <button (click) = "navegarFavouriteList()">Lista favoritos</button> -->
+
 <div *ngIf="filteredFilms.length > 0">
     <table>
       <tr *ngFor="let group of getMovieGroups(filteredFilms)">
         <td *ngFor="let film of group" class="recuadroCelda">
-            <img [src]="film.image" alt="Imagen no disponible" width="200" height="300">
-            <b style="font-size: 15px;">{{ film.title }}</b>
+            <div>
+              <button id = "buttonStar" 
+                (click)="agregarALaListaDeFavoritos(film)" 
+                class = "button-star">
+                ☆
+              </button>
+            </div>
+              <img [src]="film.image" alt="Imagen no disponible" width="200" height="300">
+              <b style="font-size: 15px;">{{ film.title }}</b>
   
             <div class = "button-container">
               <button class="btn btn-primary" (click)="navegarFilmDetail(film.rank)">Ficha técnica</button>
