feat: agregue la funcionalidad de cargar una nueva tarjeta con un el form-tarjeta component. feat: agregue que se pueda eliminar y agregar tarjeta desde perfil.component

--- a/Films/src/app/components/navbar/navbar.component.html
+++ b/Films/src/app/components/navbar/navbar.component.html
@@ -11,18 +11,18 @@
     </div>
 
     <div class="box-extras">
-        <div *ngIf="showProfileAndShoppingCart" class="box-shopping-cart">
+        <div *ngIf="isLoggedIn" class="box-shopping-cart">
            <button class="button-shopping-cart" (click)="navegarCarrito()">
                <img class="img-shopping-cart" src="/assets/Shopping cart.png" alt="">    
            </button>
         </div>
-        <div *ngIf="showProfileAndShoppingCart" class="box-profile">
+        <div *ngIf="isLoggedIn" class="box-profile">
             <button class="button-profile" (click)="navegarPerfil()">
                <img class="img-profile" src="/assets/person.png" alt="">             
             </button>
         </div>
         
-        <div *ngIf="!showProfileAndShoppingCart" class="box-signIn-signUp">
+        <div *ngIf="!isLoggedIn" class="box-signIn-signUp">
             <button class="button-sign-in" (click)="signIn()">
                 Sign in
             </button>
