feat: agregue un nombre a la lista en su respectiva vista. favourite-list.service, favourite-list.component y f-list.model

--- a/Films/src/app/components/favourite-list/favourite-list.component.html
+++ b/Films/src/app/components/favourite-list/favourite-list.component.html
@@ -1,3 +1,5 @@
+<h2> {{Flist.listaFav.name}} </h2>
+
 <div *ngIf="arrayFilms.length > 0">
     <table>
       <tr *ngFor="let group of getMovieGroups(arrayFilms)">
