--- a/Films/src/app/components/admin-code/admin-code.component.html
+++ b/Films/src/app/components/admin-code/admin-code.component.html
@@ -8,7 +8,7 @@
               <div class="form-group mb-4">
                 <label for="adminCode">Ingrese su código de admin</label>
                 <input
-                  type="text"
+                  type="password"
                   class="form-control no-border"
                   id="adminCode"
                   [(ngModel)]="adminCode"
