--- a/Films/src/app/components/perfil/perfil.component.css
+++ b/Films/src/app/components/perfil/perfil.component.css
@@ -36,6 +36,10 @@
     text-align: center;
 }
 
+.box-datos{
+    background-color: transparent;
+}
+
 .tarjeta {
     position: relative;
     background: linear-gradient(135deg, #323232, #1a1a1a);
@@ -97,6 +101,11 @@
     width: max-content;
 }
 
+.input-fullname{
+    border: none;
+    outline: none;
+}
+
 .button-edit-tarjeta,
 .button-delete,
 .button-new-tarjeta{
@@ -154,6 +163,94 @@
 .cancel-form:hover{
     background-color: rgb(164, 164, 164);
     border-radius: 0.5rem;
+}
+
+.box-fullname{
+    display: flex;
+}
+
+.form-password{
+    position: fixed; /* Para que se mantenga en la pantalla */
+    top: 30%; /* Centra verticalmente */
+    left: 50%; /* Centra horizontalmente */
+    transform: translate(-50%, -50%); /* Ajusta el centro real */
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.8); 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Sombra */ 
+    padding: 2rem; /* Espaciado alrededor del formulario */
+    border-radius: 10px;
+}
+
+.field{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    background-color: transparent;
+    color: aliceblue;
+    margin-bottom: 1rem;
+}
+
+.box-field{
+    display: grid;
+    padding: 0.2rem;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 1.5rem;
+    background-color: transparent;
+}
+
+.box-input-password{
+    display: flex;
+    justify-content: center;
+    background-color: transparent;
+}
+
+#input-password{
+    display: flex;
+    justify-content: center;
+    margin-block: 0.2rem;
+    font-size: 1rem;
+    height: 2rem;
+    width: 12rem;
+    border: 0.1rem solid transparent;
+    outline: 0.1rem solid transparent;
+    border-radius: 0.5rem;
+    background-color: transparent;
+}
+
+#input-password::placeholder{
+    color: black;
+    padding: 0.4rem;
+    background-color: aliceblue;
+    letter-spacing: 0.1rem;
+}
+
+.button{
+    padding-inline: 0.4rem;
+    font-size: 1rem;
+    padding-block: 0.4rem;
+    background-color: rgb(130, 130, 130);
+    border: 1px solid transparent;
+    transition: border 0.3s ease, border-radius 0.3s ease;
+    cursor: pointer;
+    color: white;
+}
+
+.button:hover{
+    background-color: rgb(164, 164, 164);
+    border-radius: 1rem;
+}
+
+.box-error{
+    margin-top: 0.2rem;
+    color: rgb(205, 25, 25);
+}
+
+.box-options-password{
+    background-color: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .box-mi-perfil,
