--- a/Films/src/app/components/perfil/perfil.component.html
+++ b/Films/src/app/components/perfil/perfil.component.html
@@ -161,21 +161,29 @@
             <div class="chip"></div>
             <div class="box-datos">
               <p class="dato-tarjeta nTarjeta" *ngIf="!permitirEditarTarjeta"> **** **** **** {{lastFourDigits}}</p>
-              <input id="nTarjeta" class="dato-tarjeta nTarjeta" *ngIf="permitirEditarTarjeta" type="text" formControlName="nTarjeta" placeholder="usuarioActual?.tarjeta?.nTarjeta">
+              <form class="formEditCard dato-tarjeta nTarjeta" action="#" [formGroup]="cardFormGroup" *ngIf="permitirEditarTarjeta">
+                <input id="numberCard" class="dato-tarjeta nTarjeta input-edit" type="text" formControlName="nTarjeta">
+              </form>
             </div>
             <div class="box-datos">
               <p class="dato-tarjeta vencimiento"  *ngIf="!permitirEditarTarjeta">{{ usuarioActual?.tarjeta?.fechaVencimiento }}</p>
-              <input id="fechaVencimiento" class="dato-tarjeta vencimiento" *ngIf="permitirEditarTarjeta" type="text" formControlName="fechaVencimiento" placeholder="usuarioActual?.tarjeta?.fechaVencimiento">
+              <form class="formEditCard dato-tarjeta vencimiento" action="#" [formGroup]="cardFormGroup" *ngIf="permitirEditarTarjeta">
+                <input class="dato-tarjeta vencimiento input-edit" type="text" formControlName="fechaVencimiento">
+              </form>
             </div>
             <div class="last-data">
               <div class="box-fullname">
                 <div class="box-datos">
                   <p class="dato-tarjeta fullname"  *ngIf="!permitirEditarTarjeta">{{usuarioActual?.tarjeta?.firstName}}</p>
-                  <input id="firstname" class="dato-tarjeta fullname" *ngIf="permitirEditarTarjeta" type="text" formControlName="firstname" placeholder="{{usuarioActual?.tarjeta?.firstName}}">
+                  <form class="formEditCard dato-tarjeta" action="#" [formGroup]="cardFormGroup" *ngIf="permitirEditarTarjeta">
+                    <input id="firstname" class="dato-tarjeta fullname-input input-edit" type="text" formControlName="firstName">
+                  </form>
                 </div>
                 <div class="box-datos">
                   <p class="dato-tarjeta fullname"  *ngIf="!permitirEditarTarjeta">{{usuarioActual?.tarjeta?.lastName}}</p>
-                  <input id="lastname" class="dato-tarjeta fullname input-fullname" *ngIf="permitirEditarTarjeta" type="text" formControlName="lastname" placeholder="{{usuarioActual?.tarjeta?.lastName}}">
+                  <form class="formEditCard dato-tarjeta" action="#" [formGroup]="cardFormGroup" *ngIf="permitirEditarTarjeta">
+                    <input id="lastname" class="dato-tarjeta fullname-input input-edit" type="text" formControlName="lastName">
+                  </form>
                 </div>
               </div>
               <p class="dato-tarjeta tipo-tarjeta">VISA</p>
@@ -195,10 +203,11 @@
                 <app-tarjeta-form></app-tarjeta-form>
               </div>
               <div *ngIf="cardExists" class="card-exist">
-                <button class="button-delete" (click)="deleteCard()">
+                
+                <button *ngIf="showOptionButtonsToCard" class="button-delete" (click)="deleteCard()">
                   <img class="delete" src="/assets/delete.png" alt="">
                 </button>
-                <button class="edit button-edit-tarjeta" (click)="toggleFormPassword()">
+                <button *ngIf="showOptionButtonsToCard" class="edit button-edit-tarjeta" (click)="toggleFormPassword()">
                   <img class="img-edit-tarjeta" src="/assets/Edit.png" alt="">
                 </button>
 
@@ -207,7 +216,7 @@
                     <div class="box-field">
                         <h5 class="field">Ingrese su contraseña para seguir</h5>
                         <div class="box-input-password">
-                          <input id="input-password" type="text" placeholder="Contraseña...">
+                          <input id="input-password" [(ngModel)]="passwordToEdit" type="text" placeholder="Contraseña...">
                         </div>
                     </div>
                     <div class="box-options-password">
@@ -219,6 +228,13 @@
                     </div>
                   </div>
                 </div>
+
+                <div class="box-options-edit-card" *ngIf="activeOptionsEditCard">
+                  <button id="button-cancel-edit-card" class="button-option-edit-card" (click)="cancelEditCard()">✖</button>
+                  <button class="button-option-edit-card" (click)="confirmEditCard()">✔</button>
+                </div>
+
+                <div>{{resultEditCard}}</div>
 
               </div>
           </div>
