feat: agregue funcionalidad de cambio de contraseña en el perfil

--- a/Films/src/app/components/perfil/perfil.component.css
+++ b/Films/src/app/components/perfil/perfil.component.css
@@ -339,6 +339,12 @@
     justify-content: center;
 }
 
+.box-password{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+
 .box-email-edit{
     display: flex;
     align-items: center;
