--- a/Films/src/app/components/perfil/perfil.component.html
+++ b/Films/src/app/components/perfil/perfil.component.html
@@ -93,7 +93,7 @@
       <h4>E-mail</h4>
       <div class="contenido-datos-de-cuenta">
         <div class="box-1">
-          <div class="box-email-edit">
+          <div class="box-1">
             <p *ngIf="!isEditingEmail" class="paragraph">{{usuarioActual?.email}}</p>
             <form action="#" [formGroup]="formGroupEmail">
               <input type="email" class="edit-input" *ngIf="isEditingEmail" formControlName="email"/>
@@ -116,6 +116,53 @@
         </div>
 
         <div id="resultado-operacion" class="mt-3">{{resultEmail}}</div>
+      </div>
+
+      <h4>Contraseña</h4>
+      <div class="contenido-datos-de-cuenta">
+        <div class="box-password">
+          <div class="box-1">
+            <p *ngIf="!isEditingPassword" class="paragraph"> * * * * * * * * </p>
+            <form action="#" [formGroup]="formGroupPassword">
+              <input type="password" class="edit-input" *ngIf="isEditingPassword" formControlName="password"/>
+            </form>
+
+            <button class="edit" *ngIf="!isEditingPassword" (click)="toggleFormToEditPassword()">
+              <img class="img-edit" src="/assets/Edit.png" alt="">
+            </button>
+
+            <div class="options-container">
+              <button class="confirm-button" *ngIf="isEditingPassword" type="submit" (click)="confirmChangePassword()">✔</button>
+              <button class="cancel-button" *ngIf="isEditingPassword" (click)="cancelEdit()">✖</button>
+            </div>
+
+            <div *ngIf="showFormToEditPassword">
+              <div class="form-password">
+                <div class="box-field">
+                    <h5 class="field">Ingrese su contraseña actual para seguir</h5>
+                    <div class="box-input-password">
+                      <input id="input-password" [(ngModel)]="passwordToVerify" type="password" placeholder="Contraseña actual...">
+                    </div>
+                </div>
+                <div class="box-options-password">
+                  <button class="button" (click)="toggleFormToEditPassword()">Cancelar</button>
+                  <button class="button" (click)="verifyActualPasswordToEditNewPassword()">Enviar</button>
+                </div>
+                <div class="box-error">
+                  {{resultInputPassword}}
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div *ngIf="!showErrors && password_fc?.invalid && (password_fc?.dirty || password_fc?.touched)" class="box-password">
+            <div class="text-danger" *ngIf="password_fc?.hasError('required')">La contraseña es requerida</div>
+            <div class="text-danger" *ngIf="password_fc?.hasError('minDosNumeros')">La contraseña debe contener mínimo 2 números</div>
+            <div class="text-danger" *ngIf="password_fc?.hasError('minlength')">La contraseña debe contener mínimo 6 caracteres</div>
+          </div>
+  
+          <div id="resultado-operacion" class="mt-3">{{resultPassword}}</div>
+        </div>
       </div>
     </div>
   </section>
@@ -216,7 +263,7 @@
                     <div class="box-field">
                         <h5 class="field">Ingrese su contraseña para seguir</h5>
                         <div class="box-input-password">
-                          <input id="input-password" [(ngModel)]="passwordToEdit" type="text" placeholder="Contraseña...">
+                          <input id="input-password" [(ngModel)]="passwordToEdit" type="password" placeholder="Contraseña...">
                         </div>
                     </div>
                     <div class="box-options-password">
