--- a/Films/src/app/components/perfil/perfil.component.css
+++ b/Films/src/app/components/perfil/perfil.component.css
@@ -249,11 +249,18 @@
     border: 0.1rem solid transparent;
     outline: 0.1rem solid transparent;
     border-radius: 0.5rem;
-    background-color: transparent;
+    background-color: aliceblue;
 }
 
 #input-password::placeholder{
-    color: black;
+    color: grey;
+    padding: 0.4rem;
+    background-color: aliceblue;
+    letter-spacing: 0.1rem;
+}
+
+#input-password:focus{
+    color: grey;
     padding: 0.4rem;
     background-color: aliceblue;
     letter-spacing: 0.1rem;
