--- a/Films/src/app/components/tarjeta/tarjeta.component.css
+++ b/Films/src/app/components/tarjeta/tarjeta.component.css
@@ -16,3 +16,136 @@
     font-style: italic;
     font-weight: bold;
 }
+
+.box-tarjeta-agregada{
+    margin-block: 1rem;
+    display: grid;
+    justify-content: center;
+}
+
+.chip {
+    width: 40px;
+    height: 30px;
+    background: linear-gradient(135deg, #d1cdbb, #b2ae94);
+    border-radius: 5px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.tarjeta {
+    position: relative;
+    background: linear-gradient(135deg, #323232, #1a1a1a);
+    padding: 1rem;
+    border-radius: 1rem;
+    width: 320px;
+    height: 180px;
+    color: #fff;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.box-datos{
+    background-color: transparent;
+}
+
+.dato-tarjeta{
+    background: #2f3031;
+    color: #f0f0f0;
+    padding: 0.2rem;
+    margin: 0;
+}
+
+.vencimiento{
+    text-align: center;
+}
+
+.nTarjeta{
+    letter-spacing: 0.3rem;
+    text-align: center;
+}
+
+.last-data{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #2f3031;
+}
+
+.box-fullname{
+    display: flex;
+}
+
+.fullname{
+    width: max-content;
+    padding-inline: 0.8rem;
+}
+
+.tipo-tarjeta{
+    text-align: right;
+    width: max-content;
+}
+
+.box-options{
+    display: flex;
+    justify-content: center;
+    margin-block: 0.4rem;
+}
+
+.show-buttons{
+    display: grid;
+    justify-content: center;
+}
+
+#yes{
+    padding-inline: 1.5rem;
+    margin-right: 1rem;
+}
+
+#newCard{
+    margin-right: 1rem;
+}
+
+.button{
+    padding-inline: 0.4rem;
+    font-size: 1.1rem;
+    padding-block: 0.4rem;
+    background-color: rgb(130, 130, 130);
+    border: 1px solid transparent;
+    transition: border 0.3s ease, border-radius 0.3s ease;
+    cursor: pointer;
+    color: white;
+}
+
+.button:hover{
+    background-color: rgb(164, 164, 164);
+    border-radius: 1rem;
+}
+
+.tarjeta-form-overlay {
+    position: fixed; /* Para que se mantenga en la pantalla */
+    top: 50%; /* Centra verticalmente */
+    left: 50%; /* Centra horizontalmente */
+    transform: translate(-50%, -50%); /* Ajusta el centro real */
+    background-color: rgba(0, 0, 0, 0.8); /* Fondo oscuro semitransparente */
+    padding: 2rem; /* Espaciado alrededor del formulario */
+    border-radius: 10px; /* Bordes redondeados */
+    z-index: 1000; /* Asegúrate de que esté sobre otros elementos */
+    color: white; /* Color del texto */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Sombra */
+    width: 30rem;
+}
+
+.cancel-form{
+    padding-inline: 0.6rem;
+    font-size: 1.3rem;
+    padding-block: 0.2rem;
+    background-color: rgb(130, 130, 130);
+    border: 1px solid transparent;
+    transition: border 0.3s ease, border-radius 0.3s ease;
+    cursor: pointer;
+    color: white;
+    position: absolute; /* Posicionamiento absoluto dentro del contenedor */
+    top: 10px; /* Ajusta la distancia desde la parte superior */
+    right: 40px; /* Ajusta la distancia desde la parte derecha */
+}
