--- a/Films/src/app/components/perfil/perfil.component.html
+++ b/Films/src/app/components/perfil/perfil.component.html
@@ -8,81 +8,141 @@
     <h3 class="sub-title">Datos personales</h3>
     <div class="container">
       <h4>Nombre</h4>
-      <div class="contenido-infomacion-personal">
-        <div class="box-1">
-          <p *ngIf="!isEditingFirstName" class="paragraph">{{ usuarioActual?.firstName }}</p>
-          <form action="#" [formGroup]="formGroupFirstName">
-            <input class="edit-input" *ngIf="isEditingFirstName" formControlName="firstname"/>
-          </form>
-  
-          <button class="edit" *ngIf="!isEditingFirstName" (click)="toggleEditFirstame()">
-            <img class="img-edit" src="/assets/Edit.png" alt="">
-          </button>
-  
-          <div class="options-container">
-             <button class="confirm-button" *ngIf="isEditingFirstName" (click)="confirmChangeFirstName()">✔</button>
-             <button class="cancel-button" *ngIf="isEditingFirstName" (click)="cancelEdit()">✖</button>
+      <div *ngIf = "!isAdmin">
+        <div class="contenido-infomacion-personal">
+          <div class="box-1">
+            <p *ngIf="!isEditingFirstName" class="paragraph">{{ usuarioActual?.firstName }}</p>
+            <form action="#" [formGroup]="formGroupFirstName">
+              <input class="edit-input" *ngIf="isEditingFirstName" formControlName="firstname"/>
+            </form>
+    
+            <button class="edit" *ngIf="!isEditingFirstName" (click)="toggleEditFirstame()">
+              <img class="img-edit" src="/assets/Edit.png" alt="">
+            </button>
+    
+            <div class="options-container">
+               <button class="confirm-button" *ngIf="isEditingFirstName" (click)="confirmChangeFirstName()">✔</button>
+               <button class="cancel-button" *ngIf="isEditingFirstName" (click)="cancelEdit()">✖</button>
+            </div>
           </div>
+  
+          <div *ngIf="!showErrors && firstname_fc?.invalid && (firstname_fc?.dirty || firstname_fc?.touched)" class="errors">
+            <div *ngIf="firstname_fc?.hasError('required')" class="text-danger">El nombre es requerido</div>
+            <div *ngIf="firstname_fc?.hasError('soloLetras')" class="text-danger">Solo letras</div>
+          </div>
+  
+          <div id="resultado-operacion" class="mt-3">{{resultFirstName}}</div>
         </div>
+      </div>
 
-        <div *ngIf="!showErrors && firstname_fc?.invalid && (firstname_fc?.dirty || firstname_fc?.touched)" class="errors">
-          <div *ngIf="firstname_fc?.hasError('required')" class="text-danger">El nombre es requerido</div>
-          <div *ngIf="firstname_fc?.hasError('soloLetras')" class="text-danger">Solo letras</div>
+      <div *ngIf = "isAdmin">
+        <div class="contenido-infomacion-personal">
+          <div class="box-1">
+            <p *ngIf="!isEditingFirstName" class="paragraph">{{ adminActual?.firstName }}</p>
+            <form action="#" [formGroup]="formGroupFirstName">
+              <input class="edit-input" *ngIf="isEditingFirstName" formControlName="firstname"/>
+            </form>
+    
+            <button class="edit" *ngIf="!isEditingFirstName" (click)="toggleEditFirstame()">
+              <img class="img-edit" src="/assets/Edit.png" alt="">
+            </button>
+    
+            <div class="options-container">
+               <button class="confirm-button" *ngIf="isEditingFirstName" (click)="confirmChangeFirstName()">✔</button>
+               <button class="cancel-button" *ngIf="isEditingFirstName" (click)="cancelEdit()">✖</button>
+            </div>
+          </div>
+  
+          <div *ngIf="!showErrors && firstname_fc?.invalid && (firstname_fc?.dirty || firstname_fc?.touched)" class="errors">
+            <div *ngIf="firstname_fc?.hasError('required')" class="text-danger">El nombre es requerido</div>
+            <div *ngIf="firstname_fc?.hasError('soloLetras')" class="text-danger">Solo letras</div>
+          </div>
+  
+          <div id="resultado-operacion" class="mt-3">{{resultFirstName}}</div>
         </div>
-
-        <div id="resultado-operacion" class="mt-3">{{resultFirstName}}</div>
       </div>
 
       <h4>Apellido</h4>
-      <div class="contenido-infomacion-personal">
-        <div class="box-1">
-          <p *ngIf="!isEditingLastName" class="paragraph">{{usuarioActual?.lastName}}</p>
-          <form action="#" [formGroup]="formGroupLastName">
-            <input class="edit-input" *ngIf="isEditingLastName" formControlName="lastname"/>
-          </form>
+      <div *ngIf = "!isAdmin">
+        <div class="contenido-infomacion-personal">
+          <div class="box-1">
+            <p *ngIf="!isEditingLastName" class="paragraph">{{usuarioActual?.lastName}}</p>
+            <form action="#" [formGroup]="formGroupLastName">
+              <input class="edit-input" *ngIf="isEditingLastName" formControlName="lastname"/>
+            </form>
+    
+            <button class="edit" *ngIf="!isEditingLastName" (click)="toggleEditLastName()">
+              <img class="img-edit" src="/assets/Edit.png" alt="">
+            </button>
   
-          <button class="edit" *ngIf="!isEditingLastName" (click)="toggleEditLastName()">
-            <img class="img-edit" src="/assets/Edit.png" alt="">
-          </button>
-
-          <div class="options-container">
-             <button class="confirm-button" *ngIf="isEditingLastName" (click)="confirmChangeLastName()">✔</button>
-             <button class="cancel-button" *ngIf="isEditingLastName" (click)="cancelEdit()">✖</button>
+            <div class="options-container">
+               <button class="confirm-button" *ngIf="isEditingLastName" (click)="confirmChangeLastName()">✔</button>
+               <button class="cancel-button" *ngIf="isEditingLastName" (click)="cancelEdit()">✖</button>
+            </div>
           </div>
+  
+          <div *ngIf="!showErrors && lastname_fc?.invalid && (lastname_fc?.dirty || lastname_fc?.touched)" class="errors">
+            <div *ngIf="lastname_fc?.hasError('required')" class="text-danger">El apellido es requerido</div>
+            <div *ngIf="firstname_fc?.hasError('soloLetras')" class="text-danger">Solo letras</div>
+          </div>
+  
+          <div id="resultado-operacion" class="mt-3">{{resultLastName}}</div>
         </div>
-
-        <div *ngIf="!showErrors && lastname_fc?.invalid && (lastname_fc?.dirty || lastname_fc?.touched)" class="errors">
-          <div *ngIf="lastname_fc?.hasError('required')" class="text-danger">El apellido es requerido</div>
-          <div *ngIf="firstname_fc?.hasError('soloLetras')" class="text-danger">Solo letras</div>
-        </div>
-
-        <div id="resultado-operacion" class="mt-3">{{resultLastName}}</div>
       </div>
 
-      <h4>DNI</h4>
-      <div class="contenido-dni">
-        <div class="box-1">
-          <p *ngIf="!isEditingDni" class="paragraph">{{ usuarioActual?.dni }}</p>
-          <form action="#" [formGroup]="formGroupDNI">
-            <input class="edit-input" *ngIf="isEditingDni" formControlName="dni"/>
-          </form>
+      <div *ngIf = "isAdmin">
+        <div class="contenido-infomacion-personal">
+          <div class="box-1">
+            <p *ngIf="!isEditingLastName" class="paragraph">{{adminActual?.lastName}}</p>
+            <form action="#" [formGroup]="formGroupLastName">
+              <input class="edit-input" *ngIf="isEditingLastName" formControlName="lastname"/>
+            </form>
+    
+            <button class="edit" *ngIf="!isEditingLastName" (click)="toggleEditLastName()">
+              <img class="img-edit" src="/assets/Edit.png" alt="">
+            </button>
   
-          <button class="edit" *ngIf="!isEditingDni" (click)="toggleEditDni()">
-            <img class="img-edit" src="/assets/Edit.png" alt="">
-          </button>
-  
-          <div class="options-container">
-            <button class="confirm-button" *ngIf="isEditingDni" (click)="confirmChangeDNI()">✔</button>
-            <button class="cancel-button" *ngIf="isEditingDni" (click)="cancelEdit()">✖</button>
+            <div class="options-container">
+               <button class="confirm-button" *ngIf="isEditingLastName" (click)="confirmChangeLastName()">✔</button>
+               <button class="cancel-button" *ngIf="isEditingLastName" (click)="cancelEdit()">✖</button>
+            </div>
           </div>
+  
+          <div *ngIf="!showErrors && lastname_fc?.invalid && (lastname_fc?.dirty || lastname_fc?.touched)" class="errors">
+            <div *ngIf="lastname_fc?.hasError('required')" class="text-danger">El apellido es requerido</div>
+            <div *ngIf="firstname_fc?.hasError('soloLetras')" class="text-danger">Solo letras</div>
+          </div>
+  
+          <div id="resultado-operacion" class="mt-3">{{resultLastName}}</div>
         </div>
+      </div>
+      
+      <div *ngIf = "!isAdmin">
+        <h4>DNI</h4>
+        <div class="contenido-dni">
+          <div class="box-1">
+            <p *ngIf="!isEditingDni" class="paragraph">{{ usuarioActual?.dni }}</p>
+            <form action="#" [formGroup]="formGroupDNI">
+              <input class="edit-input" *ngIf="isEditingDni" formControlName="dni"/>
+            </form>
+    
+            <button class="edit" *ngIf="!isEditingDni" (click)="toggleEditDni()">
+              <img class="img-edit" src="/assets/Edit.png" alt="">
+            </button>
+    
+            <div class="options-container">
+              <button class="confirm-button" *ngIf="isEditingDni" (click)="confirmChangeDNI()">✔</button>
+              <button class="cancel-button" *ngIf="isEditingDni" (click)="cancelEdit()">✖</button>
+            </div>
+          </div>
 
-        <div *ngIf="!showErrors && dni_fc?.invalid && (dni_fc?.dirty || dni_fc?.touched)" class="errors">
-          <div *ngIf="dni_fc?.hasError('required')" class="text-danger">El DNI es requerido</div>
-          <div *ngIf="dni_fc?.hasError('soloNumeros')" class="text-danger">DNI contiene solo numeros</div>
+          <div *ngIf="!showErrors && dni_fc?.invalid && (dni_fc?.dirty || dni_fc?.touched)" class="errors">
+            <div *ngIf="dni_fc?.hasError('required')" class="text-danger">El DNI es requerido</div>
+            <div *ngIf="dni_fc?.hasError('soloNumeros')" class="text-danger">DNI contiene solo numeros</div>
+          </div>
+
+          <div id="resultado-operacion" class="mt-3">{{resultDNI}}</div>
         </div>
-
-        <div id="resultado-operacion" class="mt-3">{{resultDNI}}</div>
       </div>
     </div> 
   </section>
@@ -91,65 +151,99 @@
     <h3 class="sub-title">Datos de Cuenta</h3>
     <div class="container">
       <h4>E-mail</h4>
-      <div class="contenido-datos-de-cuenta">
-        <div class="box-1">
-          <div class="box-email-edit">
-            <p *ngIf="!isEditingEmail" class="paragraph">{{usuarioActual?.email}}</p>
-            <form action="#" [formGroup]="formGroupEmail">
-              <input type="email" class="edit-input" *ngIf="isEditingEmail" formControlName="email"/>
+      <div *ngIf = "!isAdmin"> 
+        <div class="contenido-datos-de-cuenta">
+          <div class="box-1">
+            <div class="box-email-edit">
+              <p *ngIf="!isEditingEmail" class="paragraph">{{usuarioActual?.email}}</p>
+              <form action="#" [formGroup]="formGroupEmail">
+                <input type="email" class="edit-input" *ngIf="isEditingEmail" formControlName="email"/>
+              </form>
+      
+              <button class="edit" *ngIf="!isEditingEmail" (click)="toggleEditEmail()">
+                <img class="img-edit" src="/assets/Edit.png" alt="">
+              </button>
+            </div>
+    
+            <div class="options-container">
+              <button class="confirm-button" *ngIf="isEditingEmail" type="submit" (click)="confirmChangeEmail()">✔</button>
+              <button class="cancel-button" *ngIf="isEditingEmail" (click)="cancelEdit()">✖</button>
+            </div>
+          </div>
+  
+          <div *ngIf="!showErrors && email_fc?.invalid && (email_fc?.dirty || email_fc?.touched)" class="errors">
+            <div *ngIf="email_fc?.hasError('required')" class="text-danger">El email es requerido</div>
+            <div *ngIf="email_fc?.hasError('email')" class="text-danger">Formato de Email Incorrecto</div>
+          </div>
+  
+          <div id="resultado-operacion" class="mt-3">{{resultEmail}}</div>
+        </div>
+      </div>
+
+      <div *ngIf = "isAdmin">
+        <div class="contenido-datos-de-cuenta">
+          <div class="box-1">
+            <div class="box-email-edit">
+              <p *ngIf="!isEditingEmail" class="paragraph">{{adminActual?.email}}</p>
+              <form action="#" [formGroup]="formGroupEmail">
+                <input type="email" class="edit-input" *ngIf="isEditingEmail" formControlName="email"/>
+              </form>
+      
+              <button class="edit" *ngIf="!isEditingEmail" (click)="toggleEditEmail()">
+                <img class="img-edit" src="/assets/Edit.png" alt="">
+              </button>
+            </div>
+    
+            <div class="options-container">
+              <button class="confirm-button" *ngIf="isEditingEmail" type="submit" (click)="confirmChangeEmail()">✔</button>
+              <button class="cancel-button" *ngIf="isEditingEmail" (click)="cancelEdit()">✖</button>
+            </div>
+          </div>
+  
+          <div *ngIf="!showErrors && email_fc?.invalid && (email_fc?.dirty || email_fc?.touched)" class="errors">
+            <div *ngIf="email_fc?.hasError('required')" class="text-danger">El email es requerido</div>
+            <div *ngIf="email_fc?.hasError('email')" class="text-danger">Formato de Email Incorrecto</div>
+          </div>
+  
+          <div id="resultado-operacion" class="mt-3">{{resultEmail}}</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<div *ngIf = "!isAdmin">
+    <section class="box-domicilios">
+      <h3 class="sub-title">Domicilios</h3>
+      <div class="container">
+        <h4>Direccion</h4>
+        <div class="contenido-datos-domicilios">
+          <div class="box-1">
+            <p *ngIf="!isEditingAddress" class="paragraph"> {{usuarioActual?.address}}</p>
+            <form action="#" [formGroup]="formGroupAddress">
+              <input class="edit-input" *ngIf="isEditingAddress" formControlName="address" />
             </form>
     
-            <button class="edit" *ngIf="!isEditingEmail" (click)="toggleEditEmail()">
+            <button class="edit" *ngIf="!isEditingAddress" (click)="toggleEditAddress()">
               <img class="img-edit" src="/assets/Edit.png" alt="">
             </button>
+    
+            <div class="options-container">
+              <button class="confirm-button" *ngIf="isEditingAddress" (click)="confirmChangeAddress()">✔</button>
+              <button class="cancel-button" *ngIf="isEditingAddress" (click)="cancelEdit()">✖</button>
+            </div>
           </div>
-  
-          <div class="options-container">
-            <button class="confirm-button" *ngIf="isEditingEmail" type="submit" (click)="confirmChangeEmail()">✔</button>
-            <button class="cancel-button" *ngIf="isEditingEmail" (click)="cancelEdit()">✖</button>
+
+          <div *ngIf="!showErrors && address_fc?.invalid && (address_fc?.dirty || address_fc?.touched)" class="errors">
+            <div *ngIf="address_fc?.hasError('required')" class="text-danger">La direccion es requerida</div>
           </div>
-        </div>
 
-        <div *ngIf="!showErrors && email_fc?.invalid && (email_fc?.dirty || email_fc?.touched)" class="errors">
-          <div *ngIf="email_fc?.hasError('required')" class="text-danger">El email es requerido</div>
-          <div *ngIf="email_fc?.hasError('email')" class="text-danger">Formato de Email Incorrecto</div>
+          <div id="resultado-operacion" class="mt-3">{{resultAddress}}</div>
         </div>
-
-        <div id="resultado-operacion" class="mt-3">{{resultEmail}}</div>
       </div>
-    </div>
-  </section>
+    </section>
+</div>
 
-  <section class="box-domicilios">
-    <h3 class="sub-title">Domicilios</h3>
-    <div class="container">
-      <h4>Direccion</h4>
-      <div class="contenido-datos-domicilios">
-        <div class="box-1">
-          <p *ngIf="!isEditingAddress" class="paragraph"> {{usuarioActual?.address}}</p>
-          <form action="#" [formGroup]="formGroupAddress">
-            <input class="edit-input" *ngIf="isEditingAddress" formControlName="address" />
-          </form>
-  
-          <button class="edit" *ngIf="!isEditingAddress" (click)="toggleEditAddress()">
-            <img class="img-edit" src="/assets/Edit.png" alt="">
-          </button>
-  
-          <div class="options-container">
-            <button class="confirm-button" *ngIf="isEditingAddress" (click)="confirmChangeAddress()">✔</button>
-            <button class="cancel-button" *ngIf="isEditingAddress" (click)="cancelEdit()">✖</button>
-          </div>
-        </div>
-
-        <div *ngIf="!showErrors && address_fc?.invalid && (address_fc?.dirty || address_fc?.touched)" class="errors">
-          <div *ngIf="address_fc?.hasError('required')" class="text-danger">La direccion es requerida</div>
-        </div>
-
-        <div id="resultado-operacion" class="mt-3">{{resultAddress}}</div>
-      </div>
-    </div>
-  </section>
-
+<div *ngIf = "!isAdmin">
   <section class="box-tarjetas">
     <h3 class="sub-title">Mis Tarjetas</h3>
     <div class="container">
@@ -266,6 +360,7 @@
     </div>
     <div class="box-errors box-error">{{resultEditCard}}</div>
   </section>
+</div>
 
   <section class="box-logout">
     <div class="contenido-logout">
