comente una linea que me habia olvidado

--- a/Films/src/app/components/inicio-aux/inicio-aux.component.html
+++ b/Films/src/app/components/inicio-aux/inicio-aux.component.html
@@ -1,4 +1,4 @@
-<button (click) = "navegarFavouriteList()">Lista favoritos</button>
+<!-- <button (click) = "navegarFavouriteList()">Lista favoritos</button> -->
 
 <div *ngIf="filteredFilms.length > 0">
     <table>
